style accordion media-blocks for mobile, style form errors after interacting with form, fix letter spacing on quotes, larger stats on mobile, no mobile hover state for search, fix Youth Program colors on mobile search form, validate footer newsletter form

--- a/web/app/themes/cfs/assets/styles/components/_accordions.scss
+++ b/web/app/themes/cfs/assets/styles/components/_accordions.scss
@@ -45,12 +45,31 @@
 
 // Accordion media blocks (each accordion can have an associated block of content)
 .media-block {
+  // Mobile only media block styles
+  @include max-screen($breakpoint-md) {
+    position: relative;
+    margin: mobile-grid(3) 0 0;
+    // Mobile stats get colorded bar at left
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: -40px;
+      width: 16px;
+      height: 100%;
+      @include theme-color('background', $red);
+    }
+  }
   &.stat {
     dl {
       margin: 0;
     }
     dd {
       @extend .h1;
+      // Override mobile + desktop .h1 sizes to be same for stat
+      font-size: 60px;
+      letter-spacing: 0.0065em;
       margin: 0 0 grid(2);
     }
     dt {
@@ -65,6 +84,7 @@
       margin: 0 0 grid(1);
       text-transform: uppercase;
       font: 30px/1 $font-header;
+      letter-spacing: 0.013em;
     }
     cite {
       display: block;
