--- a/web/app/themes/cfs/assets/styles/components/_forms.scss
+++ b/web/app/themes/cfs/assets/styles/components/_forms.scss
@@ -39,12 +39,21 @@ form {
 				top: -16px;
 			}
 		}
-
+    &.has-touched:required:invalid {
+      border-color: $red;
+      border-width: 4px;
+      + label {
+        color: $red;
+        border-color: $red;
+        border-width: 4px;
+      }
+    }
     @include max-screen($breakpoint-md) {
       // Avoid zoom on mobile with input:focus
       font-size: 16px;
     }
 	}
+
 	.input-item {
 		position: relative;
 		margin-bottom: 28px;
@@ -56,7 +65,7 @@ form {
 		}
 	}
 	label:not(.control) {
-		transition: all .1s steps(2);
+		transition: padding .1s steps(2), top .1s steps(2);
 		@extend .font-display;
 		margin: 0;
 		padding-bottom: 4px;
@@ -161,6 +170,7 @@ form {
   position: relative;
   display: inline-block;
   color: $black;
+  font-size: 16px;
 }
 .select select {
   display: block;
